--- a/og_arbol.ipynb
+++ b/og_arbol.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`By: Omar Giron` "
+    "`By: Omar Andony Giron Rene` "
    ]
   },
   {
