--- a/og_arbol.ipynb
+++ b/og_arbol.ipynb
@@ -15,6 +15,15 @@
    ]
   },
   {
+   "source": [
+    "Hola mundo"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
